missing json files

--- a/i18n/en/components/pages/nbsap-targets/my-country/validation.json
+++ b/i18n/en/components/pages/nbsap-targets/my-country/validation.json
@@ -1,3 +1,5 @@
 {
-    "validating" : "Validating"
+  "validating": "Validating",
+  "passedValidation": "Mandatory check passed",
+  "hasErrors": "Mandatory information missing"
 }
