--- a/i18n/en/components/layout/AppHeader.json
+++ b/i18n/en/components/layout/AppHeader.json
@@ -1,1 +1,7 @@
-{}
+{
+    "languages": "Languages",
+    "menuDashboard": "Dashboard",
+    "menuNbsapTargets": "NBSAP Targets",
+    "menu7Nr": "7th National Report",
+    "menuSearch": "Search"
+}
