--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -1,1 +1,24 @@
-{}
+{
+    "overview": "Overview",
+    "menuDashboard": "Dashboard",
+    "menuNbsaps": "NBSAPS",
+    "menuNbsapsAll": "All NBSAPS",
+    "menuNbsapsMyCountry": "My Country NBSAPS",
+    "nationalReports": "National Reports",
+    "menuNationalTargets": "National targets",
+    "menuAllTargets": "All National targets",
+    "menuMyCountryTargets": "My country targets",
+    "menuMyCountryTargetsPart1": "Part I",
+    "menuMyCountryTargetsPart2": "Part II",
+    "6thNationalReport": "6th National report",
+    "7thNationalReport": "7th National report",
+    "reports": "All reports",
+    "myCountry": "My country",
+    "sectionI": "Section I",
+    "sectionII": "Section II",
+    "sectionIII": "Section III",
+    "sectionIV": "Section IV",
+    "sectionV": "Section V",
+    "sectionVI": "Section VI",
+    "annex": "Annex"
+}
