--- a/i18n/en/components/pages/nbsap-targets/my-country/validation.json
+++ b/i18n/en/components/pages/nbsap-targets/my-country/validation.json
@@ -1,1 +1,9 @@
-{}
+{
+
+    "publishedState"    : "Published",
+    "draftState"    : "Draft",
+    "lockedState"    : "Draft locked",
+    "passedValidation"  : "Validation successful",    
+    "hasErrors" : "Failed Validations",
+    "validating"    : "Validating"
+}
