remove draft records from published records list

--- a/i18n/en/components/pages/nbsap-targets/my-country/overview.json
+++ b/i18n/en/components/pages/nbsap-targets/my-country/overview.json
@@ -5,7 +5,8 @@
     "successfulMessage"      : "You request to publish your countries National Targets and Mapping has been received.",
     "successMessageNau"      : "Your request to publish will be sent to your country's NFP who has rights to publish.",
     "successMessagePA"       : "Since there are number of records it will take few minutes to published them all.",
-    "successfulTitle"        : "Success",
+    "nbsapMessage"           : "This is a reminder if your country has not yet submitted NBSAPs, you can do it on CHM.",
+    "successTitle"        : "Success",
     "yes"                    : "Yes",
     "no"                     : "No",
     "confirmationMessage"    : "Are you sure you wan to proceed with publishing your countries National Targets and Mapping?",
