workflow locale file updates

--- a/i18n/en/components/controls/edit/KmFormWorkflow.json
+++ b/i18n/en/components/controls/edit/KmFormWorkflow.json
@@ -1,5 +1,20 @@
 {
     "close":"Close",
     "saveDraft": "Save Draft",
-    "preview": "Preview"
+    "preview": "Preview",
+    "draftSaveMessage"   : "Your record has been saved as a draft",
+    "closeWithoutSaving"    : "Your record has been closed without saving.",
+    "publishRequested"    : "Record saved. A publishing request has been sent to your BCH-NFP.",
+    "recordPublished"       : "Record published. The record will be now publicly accessible on the ORT.", 
+
+    "areYouSure": "Are you sure you want to exit this page without saving?",
+    "anyChange": "Any changes will be lost.",
+    "btnCloseWithoutSaving": "Exit without saving",
+    "exit": "Exit",
+    "stay": "Stay on this page",
+    "introduction": "Introduction",
+    "submissionForm": "Submission form",
+    "review": "Review",
+    "intro": "Intro",
+    "form": "Form"
 }
