approve batch workflow

--- a/i18n/ar/layouts/containers/AppHeader.json
+++ b/i18n/ar/layouts/containers/AppHeader.json
@@ -1,6 +1,6 @@
 {
     "languages" : "اللغات",
     "menuDashboard" : "لوحة القيادة",
-    "menuNbsapTargets" : "أهداف NBSAP",
+    "menuNationalTargets" : "الأهداف الوطنية",
     "menu7Nr" : "التقرير الوطني السابع"
 }
