--- a/i18n/zh/layouts/containers/AppHeader.json
+++ b/i18n/zh/layouts/containers/AppHeader.json
@@ -1,6 +1,6 @@
 {
     "languages" : "语言",
     "menuDashboard" : "仪表板",
-    "menuNbsapTargets" : "NBSAP 目标",
+    "menuNationalTargets" : "国家目标",
     "menu7Nr" : "第七次国家报告"
 }
