--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -5,9 +5,9 @@
     "menuNbsapsAll": "All NBSAPS",
     "menuNbsapsMyCountry": "My Country NBSAPS",
     "nationalReports": "National Reports",
-    "menuNationalTargets": "National targets",
-    "menuAllTargets": "All National targets",
-    "menuMyCountryTargets": "My country targets",
+    "menuNationalTargets": "National Targets",
+    "menuAllTargets": "All National Targets",
+    "menuMyCountryTargets": "My Country Targets",
     "menuMyCountryTargetsPart1": "Part I",
     "menuMyCountryTargetsPart2": "Part II",
     "6thNationalReport": "6th National report",
