--- a/i18n/en/components/pages/nbsap-targets/my-country/overview.json
+++ b/i18n/en/components/pages/nbsap-targets/my-country/overview.json
@@ -14,8 +14,8 @@
     "nationalTarget"         : "National Target",
     "nationalMapping"        : "Global goal/target mapping",
     "proceedAnyways"         : "I still want to proceed",
-    "missingNationalTargets" : "Your country has not submitted any national targets for these Global Goal/Target",
-    "missingNationalMappings": "Your country has not submitted mapping information for these Global Goal/Target",
+    "missingNationalTargets" : "Your country has not submitted any national targets for these Global Target(s)",
+    "missingNationalMappings": "Your country has not submitted mapping information for these Global Target(s)",
     "validatePartI"          : "Validate Part I",
     "validatePartII"         : "Validate Part II",
     "validatePartIAndPartII" : "Validate Part I and Part II",
