--- a/i18n/en/components/pages/nbsap-targets/my-country/overview.json
+++ b/i18n/en/components/pages/nbsap-targets/my-country/overview.json
@@ -12,7 +12,7 @@
     "confirmationMessage"    : "Are you sure you wan to proceed with publishing your countries National Targets and Mapping?",
     "confirmationTitle"      : "Confirmation",
     "nationalTarget"         : "National Target",
-    "nationalMapping"        : "Global goal/target mapping",
+    "nationalMapping"        : "Global Target mapping",
     "proceedAnyways"         : "I still want to proceed",
     "missingNationalTargets" : "Your country has not submitted any national targets for these Global Target(s)",
     "missingNationalMappings": "Your country has not submitted mapping information for these Global Target(s)",
