upload attachments using temp attachment endpoint

--- a/i18n/en/components/controls/edit/KmCkEditor.json
+++ b/i18n/en/components/controls/edit/KmCkEditor.json
@@ -1,1 +1,8 @@
-{}
+{
+
+    "uploadingFile" : "Upload in progress, please wait",
+    "attachmentMessage": "Attach files by dragging & dropping or pasting from clipboard",
+    "wordCount":"Word count",
+    "uploadError": "Error occurred uploading file(s), please try again"
+
+}
