--- a/i18n/en/components/pages/national-targets/my-country/part-1/view-target-part-1.json
+++ b/i18n/en/components/pages/national-targets/my-country/part-1/view-target-part-1.json
@@ -1,1 +1,5 @@
-{}
+{
+    "notFound" : "Record was not found!",
+    "notAuthorized" : "You are not authorized to access this record!",
+    "errorLoading": "Error loading view document "
+}
