--- a/i18n/en/components/actions/workflow-actions.json
+++ b/i18n/en/components/actions/workflow-actions.json
@@ -1,6 +1,9 @@
 {
+    "approveConfirmation": "Approve Confirmation",
+    "approvePublishingRequestConfirm": "Are you sure you want to approve this request",
     "approvedSuccessful" : "Record(s) published successfully.",
-    "approvalError"      : "There was an error processing your request, please try again.",
+    "rejectedSuccessful" : "Record(s) rejected successfully.",
+    "error"      : "There was an error processing your request, please try again.",
     "publishing": "Publishing",
     "deletion": "Deletion",
     "request":  "Request",
@@ -16,15 +19,20 @@
     "reject": "Reject",
     "delete": "Approve Deletion",
     "cancelRequest": "Cancel request",
+    "cancel": "Cancel",
     "workFlowAssign": "The workflow is assigned to following users",
     "visible": "visible only to admin users",
-    "requestChanges": "Request changes or reject this request",
-    "provide": "Please provide the reason this record is being rejected.",
+    "rejectConfirmation": "Reject Confirmation",
+    "rejectPublishingRequestConfirm": "Are you sure you want reject this request",
+    "rejectionProcessing": "Please wait while we process your rejection action",
+    "rejectionReason": "Please provide the reason this record is being rejected.",
     "cancelPublishingRequest": "Cancel publishing request",
     "cancelPublishingRequestConfirm": "Are you sure you want to cancel this publishing request?",
     "yes": "Yes",
+    "no": "No",
     "deleteConfirmation": "Delete Confirmation",
     "isDeleteRecord": "Are you sure you want to delete this record?",
     "deleteRecord": "Delete record",
-    "approvalProcessing": "Please wait while we process your approval action"
+    "approvalProcessing": "Please wait while we process your approval action",
+    "cancellationProcessing": "Please wait while we process your cancellation request"
 }
