--- a/i18n/en/components/controls/KmSpinner.json
+++ b/i18n/en/components/controls/KmSpinner.json
@@ -1,4 +1,4 @@
 {
     "loading"    : "Loading",
-    "loadingSuspense": "Please wait while we are loading this part of the page"
+    "loadingSuspense": "Loading"
 }
