--- a/i18n/en/components/pages/nr7/my-country/edit/section-II.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/section-II.json
@@ -1,1 +1,14 @@
-{}
+{
+    "sectionII"             : "Section II",
+    "sectionIIDescription"  : "Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+    "revisedNbsap"          : "Has your country revised or updated NBSAPs in the light of the Kunming-Montreal Global Biodiversity Framework?",
+    "yes"                   : "Yes",
+    "no"                    : "No",
+    "inProcess"             : "In Process",
+    "indicateCompletionDate": "Please indicate the anticipated date of completion of the revision or updating of the NBSAP",
+    "stakeholderEngagement" : "Did your country involve and engage stakeholders in revising or updating NBSAPs?",
+    "stakeholders"          : "Stakeholders",
+    "hasNbsapAdopted"       : "Has your country's revised or updated NBSAPs been adopted as policy or legal instruments?",
+    "indicateAdoptionDate"  : "Please indicate the anticipated date of adoption",
+    "policyInstrument"     : "Please indicate the type of policy instrument your country's revised or updated NBSAPs has been adopted as"
+}
