--- a/i18n/en/components/pages/nr7/my-country/edit/section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/section-IV.json
@@ -1,1 +1,3 @@
-{}
+{"sectionII":"Section II",
+"sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+}
