--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -9,7 +9,7 @@
     "successTitle"           : "Success",
     "yes"                    : "Yes",
     "no"                     : "No",
-    "confirmationMessage"    : "Are you sure you wan to proceed with publishing your countries National Targets and Mapping?",
+    "confirmationMessage"    : "Are you sure you want to proceed with publishing your countries National Targets and Mapping?",
     "confirmationTitle"      : "Confirmation",
     "nationalTarget"         : "National Target",
     "nationalMapping"        : "Global Target mapping",
