--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -25,5 +25,6 @@
     "partI"                  : "Part I",
     "partII"                 : "Part II",
     "welcome"                : "Welcome to your country's National Targets submission section. please select option to proceed.",
-    "spinnerMessage"         : "Please wait while we process your request."
+    "spinnerMessage"         : "Please wait while we process your request.",
+    "refresh"                : "Refresh"
 }
