--- a/i18n/en/pages/national-reports/index.json
+++ b/i18n/en/pages/national-reports/index.json
@@ -1,5 +1,5 @@
 {
-    "headerTitle" : "Global Goals/Targets mapping",
+    "headerTitle" : "National mapping with global Goals/Targets",
     "expandAll" : "Expand All",
     "collapseAll": "Collapse All",
     "editMapping": "Edit mapping",
