--- a/i18n/en/components/layout/AppSidebar.json
+++ b/i18n/en/components/layout/AppSidebar.json
@@ -20,5 +20,6 @@
     "sectionIV": "Section IV",
     "sectionV": "Section V",
     "sectionVI": "Section VI",
-    "annex": "Annex"
+    "annex": "Annex",
+    "indicatorData" : "Indicator Data"
 }
