--- a/i18n/en/components/pages/nr7/my-country/edit/section-III.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/section-III.json
@@ -1,3 +1,4 @@
-{"sectionII":"Section II",
-"sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+{
+    "sectionIII":"Section III",
+    "sectionIIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework "
 }
