add slaask to ort

--- a/i18n/en/layouts/default.json
+++ b/i18n/en/layouts/default.json
@@ -1,1 +1,4 @@
-{}
+{
+    "title": "Online Reporting Tool",
+    "description": "The Online Reporting Tool (ORT) allows countries to update national biodiversity strategies and action plans (NBSAPs), including national targets by the sixteenth meeting of the Conference of the Parties (COP-16)"
+}
