--- a/i18n/en/components/common/cbd-article.json
+++ b/i18n/en/components/common/cbd-article.json
@@ -1,1 +1,4 @@
-{}
+{
+    "noInformation":"No information is available for this section at the moment.",
+    "loading":"Loading section content"
+}
