--- a/i18n/en/components/pages/national-targets/my-country/validation.json
+++ b/i18n/en/components/pages/national-targets/my-country/validation.json
@@ -5,5 +5,8 @@
     "lockedState"    : "Draft locked",
     "passedValidation"  : "Validation successful",    
     "hasErrors" : "Failed Validations",
-    "validating"    : "Validating"
+    "validating"    : "Validating",
+
+    "nationTargets": "National targets",
+    "globalMaping": "Global Goal/Targets mapping"
 }
