--- a/i18n/en/components/common/user-profile-info.json
+++ b/i18n/en/components/common/user-profile-info.json
@@ -1,4 +1,5 @@
 {
+    "title": "User Info",
     "welcome": "Welcome",
     "publishingAuthority": "Publishing Authority",
     "nationalFocalPoint": "National Focal Point",
