--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -1,1 +1,20 @@
-{}
+{
+
+    "recentPublish":"Recent Publish!",
+    "recentlyPublished":"recently published",
+    "countryRepresentative" : "Are you a country representative responsible for National Report submission,",
+    "clickHere":   "click here",
+    "toBegin" : "to begin",
+    "6Nr":   "6th National Reports",
+    "by" : "By",
+    "countries":   "Countries",
+    "7Nr" : "7th National Reports",
+    "nationalTargets":   "National targets",
+    "nbsapsFull" : "National Biodiversity Strategies and Action Plans (NBSAPs)",
+    "nbsaps" : "NBSAPs",
+    "latestRecords":   "Latest records",
+    "title":"Title",
+    "country" : "Country",
+    "type":   "Type",
+    "publishedOn" : "Published on"      
+}
