--- a/i18n/en/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
+++ b/i18n/en/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
@@ -1,5 +1,53 @@
 {
     "general":"General",
     "government": "Government",
-    "degreeOfAlignment": "Degree of Alignment"
+    "degreeOfAlignment": "Degree of Alignment",
+    "nationalTarget":"National Target",
+    "governmentAndLanguages":"Government and Language(s)",
+    "submissionLanguage":"Please select in which language(s) you wish to submit this record",    
+    "titleHelp":"Provide a meaningful title for your national target",
+    "title":"Enter national target title",
+    "description":"Description",
+    "mainPolicyMeasures":"Please outline the main policy measures or actions that will be taken to achieve this national target.",
+    "globalGoals":"Global Goals",
+    "contributionToGoals":"Contribution to global Goals",
+    "targetsAlignment":"Alignment with global targets",
+    "globalTargets":"Global Targets",
+    "listTargets":"List Targets",
+    "relevantDegreeOfAlignmentHelp":"Please check all relevant national targets and indicate their degree of alignment with the global targets.",
+    "degreeOf":"Degree of",
+    "alignment":"Alignment",
+    "indicateHelp":"Indicate their degree of alignment with the global targets.",
+    "high":"High = covers all elements of the global target",
+    "medium":"Medium = covers most elements of the global target",
+    "low":"Low = covers at least one element of the global target",
+    "explainCoveredGoals":"Explanation, including which aspects of the goal or target are covered",
+    "considerationForImplementation":"Which of the “considerations for implementation” in Section C of the GBF have been taken into account in developing this national target, and the actions to implement it",
+    "relevantConsideration":"Please check all relevant considerations for implementation.",
+    "explainConsideration":"Please explain how these considerations have been taken into account",
+    "indicatorsUsedToMonitor":"Indicators to be used to monitor this national target",
+    "headlineIndicators":"Headline indicators",
+    "linkedHeadlineIndicator":"This National Target will be linked to the following Headline Indicators",
+    "binaryIndicators":"Binary indicators",
+    "linkedBinaryIndicator":"This National Target will be linked to the following Binary Indicators",
+    "componentIndicators":"Component indicators",
+    "complementaryIndicators":"Complementary indicators",
+    "nationalIndicators":"Other national indicators",
+    "addOwnIndicatorsHelp":"Add your own indicators",
+    "nonStateActorCommitments":"Non-State actor commitments",
+    "listOfNonStateActors":"List the non-state commitments towards this national Target",
+    "anyOverlaps":"Are there any overlaps or links between this national target and targets or commitments submitted as non-State actor commitments to the Kunming-Montreal Global Biodiversity Framework?",
+    "yes":"Yes",
+    "no":"No",
+    "commitmentsAndActors":"please indicate which commitment(s) and which actor(s)",
+    "meansToImplement":"Means to implementation and barriers to implementation",
+    "additionalMeanOfImplementation":"Please indicate if additional means of implementation are needed for the attainment of this national target.",
+    "YesMeansOfImplementation":"Yes (Additional means of implementation are needed for the attainment of this national target)",
+    "noMeansOfImplementation":"No (Means of implementation available)",
+    "other":"Other",
+    "pleaseExplain":"Please explain (Additional means of implementation are needed for the attainment of this national target)",
+    "additionalExplanation":"Additional explanation",
+    "additionalInformation":"Additional information",
+    "relevantInformation":"Any other relevant information",
+    "globalGoalsAndTargets":"Global Goals/Targets"
 }
