--- a/i18n/en/components/pages/national-targets/my-country/part-1/index.json
+++ b/i18n/en/components/pages/national-targets/my-country/part-1/index.json
@@ -1,1 +1,6 @@
-{}
+{
+    "title":"National target(s) : Part I",
+    "goToOverview":"Go to Overview",
+    "refresh":"Refresh",
+    "submitNewTarget":"Submit new target"
+}
