--- a/i18n/ar/components/pages/national-targets/my-country/validation.json
+++ b/i18n/ar/components/pages/national-targets/my-country/validation.json
@@ -5,6 +5,6 @@
   "passedValidation": "اكتمال التحقُّق",
   "hasErrors": "فشل عمليات التحقُّق",
   "validating": "قيد التحقُّق",
-  "nationTargets": "الأهداف الوطنية",
-  "globalMaping": "ربط الأهداف الوطنية بمثيلاتها العالمية"
+  "nationalTargets": "الأهداف الوطنية",
+  "globalMapping": "ربط الأهداف الوطنية بمثيلاتها العالمية"
 }
