--- a/i18n/en/components/pages/national-targets/my-country/validation.json
+++ b/i18n/en/components/pages/national-targets/my-country/validation.json
@@ -7,6 +7,6 @@
     "hasErrors" : "Failed Validations",
     "validating"    : "Validating",
 
-    "nationTargets": "National targets",
-    "globalMaping": "Global Goal/Targets mapping"
+    "nationalTargets": "National targets",
+    "globalMapping": "Global Goal/Targets mapping"
 }
