--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -1,8 +1,8 @@
 {
 
-    "recentPublish":"Recent Publish!",
+    "recentPublish":"Recently Published!",
     "recentlyPublished":"recently published",
-    "countryRepresentative" : "Are you a country representative responsible for National Report submission,",
+    "countryRepresentative" : "If you are a country representative responsible for National Report submission,",
     "clickHere":   "click here",
     "toBegin" : "to begin",
     "6Nr":   "6th National Reports",
