--- a/i18n/es/components/pages/national-targets/my-country/validation.json
+++ b/i18n/es/components/pages/national-targets/my-country/validation.json
@@ -5,6 +5,6 @@
   "passedValidation": "Validación exitosa",
   "hasErrors": "No pudo realizarse la validación",
   "validating": "Validando",
-  "nationTargets": "Metas nacionales",
-  "globalMaping": "Correspondencias con los Objetivos y las Metas mundiales"
+  "nationalTargets": "Metas nacionales",
+  "globalMapping": "Correspondencias con los Objetivos y las Metas mundiales"
 }
