--- a/i18n/ru/components/pages/national-targets/my-country/validation.json
+++ b/i18n/ru/components/pages/national-targets/my-country/validation.json
@@ -5,6 +5,6 @@
   "passedValidation": "Проверка выполнена успешно",
   "hasErrors": "Неудавшиеся проверки",
   "validating": "Проверка",
-  "nationTargets": "Национальные задачи",
-  "globalMaping": "Сопоставление глобальных целей/задач"
+  "nationalTargets": "Национальные задачи",
+  "globalMapping": "Сопоставление глобальных целей/задач"
 }
