Fix text on targets pages

--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -28,5 +28,6 @@
     "spinnerMessage"         : "Please wait while we process your request.",
     "refresh"                : "Refresh",
     "goToPartI"              : "Go to Part I",
-    "submitNewTarget"        : "Submit new target"
+    "submitNewTarget"        : "Submit new target",
+    "globalTargets"          : "Global Targets"
 }
